Fixed Spacing Issues

--- a/_sass/includes/_post_nav.scss
+++ b/_sass/includes/_post_nav.scss
@@ -9,7 +9,7 @@
 
     .post-nav-button,
     .post-nav-placeholder {
-        padding: 2em 3em;
+        padding: 2em 0;
         border-top: 1px solid rgba(0, 0, 0, 0.1);
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
